gateway/04.INGRESS/grafana-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
#    traefik.ingress.kubernetes.io/router.pathmatcher: "/"
    traefik.ingress.kubernetes.io/router.tls: "true"
#    traefik.ingress.kubernetes.io/service.serversscheme: https
#    traefik.ingress.kubernetes.io/service.serverstransport: insecure-transport
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: tmaxcloud-acme-clusterissuer
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: tmax
  rules:
    - host: monitoring.tmaxcloud.org
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
                  # name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - monitoring.tmaxcloud.org
      secretName: tmaxcloud-org
